@startuml
!pragma layout smetana

class Main{
        - {static} ConnectionPool connectionpool
    }

    package config {
        class SessionConfig {}
        class ThymeleafConfig {}
    }
    package controllers {
        class MainController {}
        class UserController {}
    }
    package dto {
        record CustomerInfoDTO {}
        record OrderLineSummaryDTO {}
        record OrderSummaryDTO {}
    }
    package entities {
        class Bottoms {
            - int id
            - String name
            - int price
        }
        class Toppings {
            - int id
            - String name
            - int price
        }
        class Muffins {}
        class Order {}
        class User {
            - int userId
            - String email
            - String password
            - double balance
            - boolean isAdmin
        }

    }
    package persistence {
        class ConnectionPool {}
        class CupcakeMapper {}
        class CustomerMapper {}
        class OrderMapper {}
        class UserMapper {}
    }
    package services {
        class Validator {}
    }


'--- Relations ---'
Main --> ConnectionPool
Main --. MainController
Main --. SessionConfig
Main --. ThymeleafConfig

MainController --. CupcakeMapper
MainController --. OrderMapper
MainController --. UserMapper

UserController --> User
UserController --. ConnectionPool
UserController --. UserMapper
UserController --. Validator

CupcakeMapper --> Bottoms
CupcakeMapper --> Toppings

CustomerMapper --> CustomerInfoDTO
CustomerMapper --> OrderSummaryDTO

OrderMapper --> OrderLineSummaryDTO
OrderMapper --> OrderSummaryDTO
OrderMapper --> Muffins
OrderMapper --> Order
OrderMapper --> User

UserMapper --> User


@enduml